--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ pydocstyle = "^6.2.3"
 
 [tool.poetry.group.tests.dependencies]
 pytest = "^7.2.0"
+coverage = "^7.1.0"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 vextract = "vextractor.console.core:start"
