--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,53 +3,61 @@
 
 # pre-commit run --all-files
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
-    -   id: check-builtin-literals
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+      - id: check-builtin-literals
 
--   repo: https://github.com/asottile/pyupgrade
+  - repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
-    -   id: pyupgrade
+      - id: pyupgrade
 
-# Errors with SSL
-# -   repo: https://github.com/crate-ci/typos
-#     rev: v1.13.3
-#     hooks:
-#     -   id: typos
+  # Errors with SSL
+  # -   repo: https://github.com/crate-ci/typos
+  #     rev: v1.13.3
+  #     hooks:
+  #     -   id: typos
 
--   repo: https://github.com/psf/black
+  - repo: https://github.com/psf/black
     rev: 22.12.0
     hooks:
-    -   id: black
+      - id: black
 
--   repo: https://github.com/asottile/blacken-docs
+  - repo: https://github.com/asottile/blacken-docs
     rev: 1.13.0
     hooks:
-    -   id: blacken-docs
-        additional_dependencies: [black==22.12.0]
+      - id: blacken-docs
+        additional_dependencies: [ black==22.12.0 ]
 
--   repo: https://github.com/pycqa/isort
+  - repo: https://github.com/pycqa/isort
     rev: 5.11.4
     hooks:
-    -   id: isort
+      - id: isort
 
--   repo: https://github.com/pycqa/flake8
+  - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
     hooks:
-    -   id: flake8
+      - id: flake8
         additional_dependencies:
-        - flake8-bugbear
-        - flake8-no-pep420
-        - flake8-comprehensions
-        - flake8-tidy-imports
+          - flake8-bugbear
+          - flake8-no-pep420
+          - flake8-comprehensions
+          - flake8-tidy-imports
 
--   repo: https://github.com/pre-commit/mirrors-mypy
+  - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.991
     hooks:
-    -   id: mypy
+      - id: mypy
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.3.2
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+      - id: poetry-export
+        args: [ "-f", "requirements.txt", "-o", "requirements.txt" ]
