--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry install --only main tests
+          poetry install --only main,tests
       - name: Test with pytest
         run: |
           poetry run pytest
