--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,7 @@ fabric.properties
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+!.vscode/spellright.dict
 
 # Local History for Visual Studio Code
 .history/
