--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pre-commit = "^2.21.0"
 [tool.poetry.group.typing.dependencies]
 isort = "^5.11.4"
 mypy = "^0.991"
+types-requests = "^2.31.0.1"
 black = "^22.12.0"
 flake8 = "^6.0.0"
 
