--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 vextract = "vextractor.console.core:start"
+vex = "vextractor.console.core:start"
 
 ### ******************** POETRY> ********************
 
